k3s/dev/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 443
      host: keystone-dev.dtn.asu.edu
  tls:
    - secretName: dtn-multi
      hosts:
        - keystone-dev.dtn.asu.edu
